components/codegen-manual-testing-existing-1/base/deployment-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app.kubernetes.io/instance: codegen-manual-testing-existing-1-database
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: codegen-manual-testing-existing-1-database
    app.kubernetes.io/part-of: codegen-manual-testing-existing-1  
  name: codegen-manual-testing-existing-1-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: codegen-manual-testing-existing-1-database
  template:
    metadata: 
      labels:
        app.kubernetes.io/instance: codegen-manual-testing-existing-1-database
    spec:
      containers:
      - image: 
        name: database
        args: [
            "--workers",
            "1", 
            "--host", 
            "0.0.0.0",
            "--port",
            "",
            "--proxy-headers", 
            "--log-config", 
            "chromadb/log_config.yml", 
            "--timeout-keep-alive", 
            "30"]
        ports:
        - containerPort: 
        securityContext:
          runAsNonRoot: true
