components/codegen-manual-testing-existing-1/base/service-database.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: codegen-manual-testing-existing-1-database
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: codegen-manual-testing-existing-1-database 
  name: codegen-manual-testing-existing-1-database
spec:
  ports:
  - port: 
    protocol: TCP
    targetPort: 
  selector:
    app.kubernetes.io/instance: codegen-manual-testing-existing-1-database
