components/codegen-manual-testing-existing-1/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: codegen-manual-testing-existing-1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: codegen-manual-testing-existing-1 
  name: codegen-manual-testing-existing-1
spec:
  ports:
  - port: 8501
    protocol: TCP
    targetPort: 8501
  selector:
    app.kubernetes.io/instance: codegen-manual-testing-existing-1
