components/codegen-manual-testing-existing-1/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: codegen-manual-testing-existing-1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: codegen-manual-testing-existing-1 
  name: codegen-manual-testing-existing-1
spec:
  port:
    targetPort: 8501
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: codegen-manual-testing-existing-1 
    weight: 100 
  wildcardPolicy: None
